6236774/antlr-generated/com/douwekasemier/oberon0/parser/Oberon0Parser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g 2011-02-01 13:34:50

  package com.douwekasemier.oberon0.parser; 


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class Oberon0Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENTIFIER", "INTEGER", "WHITESPACE", "'MODULE'", "';'", "'BEGIN'", "'END'", "'.'", "'['", "']'", "'('", "')'", "'~'", "'*'", "'DIV'", "'MOD'", "'&'", "'+'", "'-'", "'OR'", "'='", "'#'", "'<'", "'<='", "'>='", "'>'", "':='", "','", "'IF'", "'THEN'", "'ELSIF'", "'ELSE'", "'WHILE'", "'DO'", "'ARRAY'", "'OF'", "':'", "'RECORD'", "'VAR'", "'PROCEDURE'", "'CONST'", "'TYPE'"
    };
    public static final int EOF=-1;
    public static final int T__7=7;
    public static final int T__8=8;
    public static final int T__9=9;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int IDENTIFIER=4;
    public static final int INTEGER=5;
    public static final int WHITESPACE=6;

    // delegates
    // delegators


        public Oberon0Parser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public Oberon0Parser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return Oberon0Parser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g"; }


    public static class module_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "module"
    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:15:1: module : 'MODULE' identifier ';' declarations ( 'BEGIN' statementSequence )? 'END' identifier '.' ;
    public final Oberon0Parser.module_return module() throws RecognitionException {
        Oberon0Parser.module_return retval = new Oberon0Parser.module_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal1=null;
        Token char_literal3=null;
        Token string_literal5=null;
        Token string_literal7=null;
        Token char_literal9=null;
        Oberon0Parser.identifier_return identifier2 = null;

        Oberon0Parser.declarations_return declarations4 = null;

        Oberon0Parser.statementSequence_return statementSequence6 = null;

        Oberon0Parser.identifier_return identifier8 = null;


        CommonTree string_literal1_tree=null;
        CommonTree char_literal3_tree=null;
        CommonTree string_literal5_tree=null;
        CommonTree string_literal7_tree=null;
        CommonTree char_literal9_tree=null;

        try {
            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:16:3: ( 'MODULE' identifier ';' declarations ( 'BEGIN' statementSequence )? 'END' identifier '.' )
            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:16:5: 'MODULE' identifier ';' declarations ( 'BEGIN' statementSequence )? 'END' identifier '.'
            {
            root_0 = (CommonTree)adaptor.nil();

            string_literal1=(Token)match(input,7,FOLLOW_7_in_module53); 
            string_literal1_tree = (CommonTree)adaptor.create(string_literal1);
            adaptor.addChild(root_0, string_literal1_tree);

            pushFollow(FOLLOW_identifier_in_module55);
            identifier2=identifier();

            state._fsp--;

            adaptor.addChild(root_0, identifier2.getTree());
            char_literal3=(Token)match(input,8,FOLLOW_8_in_module57); 
            char_literal3_tree = (CommonTree)adaptor.create(char_literal3);
            adaptor.addChild(root_0, char_literal3_tree);

            pushFollow(FOLLOW_declarations_in_module59);
            declarations4=declarations();

            state._fsp--;

            adaptor.addChild(root_0, declarations4.getTree());
            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:17:5: ( 'BEGIN' statementSequence )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==9) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:17:6: 'BEGIN' statementSequence
                    {
                    string_literal5=(Token)match(input,9,FOLLOW_9_in_module66); 
                    string_literal5_tree = (CommonTree)adaptor.create(string_literal5);
                    adaptor.addChild(root_0, string_literal5_tree);

                    pushFollow(FOLLOW_statementSequence_in_module68);
                    statementSequence6=statementSequence();

                    state._fsp--;

                    adaptor.addChild(root_0, statementSequence6.getTree());

                    }
                    break;

            }

            string_literal7=(Token)match(input,10,FOLLOW_10_in_module72); 
            string_literal7_tree = (CommonTree)adaptor.create(string_literal7);
            adaptor.addChild(root_0, string_literal7_tree);

            pushFollow(FOLLOW_identifier_in_module74);
            identifier8=identifier();

            state._fsp--;

            adaptor.addChild(root_0, identifier8.getTree());
            char_literal9=(Token)match(input,11,FOLLOW_11_in_module76); 
            char_literal9_tree = (CommonTree)adaptor.create(char_literal9);
            adaptor.addChild(root_0, char_literal9_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "module"

    public static class identifier_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "identifier"
    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:20:1: identifier : IDENTIFIER ;
    public final Oberon0Parser.identifier_return identifier() throws RecognitionException {
        Oberon0Parser.identifier_return retval = new Oberon0Parser.identifier_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IDENTIFIER10=null;

        CommonTree IDENTIFIER10_tree=null;

        try {
            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:21:3: ( IDENTIFIER )
            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:21:5: IDENTIFIER
            {
            root_0 = (CommonTree)adaptor.nil();

            IDENTIFIER10=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_identifier93); 
            IDENTIFIER10_tree = (CommonTree)adaptor.create(IDENTIFIER10);
            adaptor.addChild(root_0, IDENTIFIER10_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "identifier"

    public static class integer_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "integer"
    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:24:1: integer : INTEGER ;
    public final Oberon0Parser.integer_return integer() throws RecognitionException {
        Oberon0Parser.integer_return retval = new Oberon0Parser.integer_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token INTEGER11=null;

        CommonTree INTEGER11_tree=null;

        try {
            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:25:3: ( INTEGER )
            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:25:5: INTEGER
            {
            root_0 = (CommonTree)adaptor.nil();

            INTEGER11=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_integer108); 
            INTEGER11_tree = (CommonTree)adaptor.create(INTEGER11);
            adaptor.addChild(root_0, INTEGER11_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "integer"

    public static class selector_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "selector"
    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:28:1: selector : ( ( '.' identifier | '[' expression ']' )? | identifier );
    public final Oberon0Parser.selector_return selector() throws RecognitionException {
        Oberon0Parser.selector_return retval = new Oberon0Parser.selector_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal12=null;
        Token char_literal14=null;
        Token char_literal16=null;
        Oberon0Parser.identifier_return identifier13 = null;

        Oberon0Parser.expression_return expression15 = null;

        Oberon0Parser.identifier_return identifier17 = null;


        CommonTree char_literal12_tree=null;
        CommonTree char_literal14_tree=null;
        CommonTree char_literal16_tree=null;

        try {
            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:29:3: ( ( '.' identifier | '[' expression ']' )? | identifier )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==8||(LA3_0>=10 && LA3_0<=13)||LA3_0==15||(LA3_0>=17 && LA3_0<=31)||(LA3_0>=33 && LA3_0<=35)||LA3_0==37||LA3_0==39) ) {
                alt3=1;
            }
            else if ( (LA3_0==IDENTIFIER) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:29:5: ( '.' identifier | '[' expression ']' )?
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:29:5: ( '.' identifier | '[' expression ']' )?
                    int alt2=3;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==11) ) {
                        alt2=1;
                    }
                    else if ( (LA2_0==12) ) {
                        alt2=2;
                    }
                    switch (alt2) {
                        case 1 :
                            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:29:6: '.' identifier
                            {
                            char_literal12=(Token)match(input,11,FOLLOW_11_in_selector124); 
                            char_literal12_tree = (CommonTree)adaptor.create(char_literal12);
                            adaptor.addChild(root_0, char_literal12_tree);

                            pushFollow(FOLLOW_identifier_in_selector126);
                            identifier13=identifier();

                            state._fsp--;

                            adaptor.addChild(root_0, identifier13.getTree());

                            }
                            break;
                        case 2 :
                            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:29:23: '[' expression ']'
                            {
                            char_literal14=(Token)match(input,12,FOLLOW_12_in_selector130); 
                            char_literal14_tree = (CommonTree)adaptor.create(char_literal14);
                            adaptor.addChild(root_0, char_literal14_tree);

                            pushFollow(FOLLOW_expression_in_selector132);
                            expression15=expression();

                            state._fsp--;

                            adaptor.addChild(root_0, expression15.getTree());
                            char_literal16=(Token)match(input,13,FOLLOW_13_in_selector134); 
                            char_literal16_tree = (CommonTree)adaptor.create(char_literal16);
                            adaptor.addChild(root_0, char_literal16_tree);


                            }
                            break;

                    }


                    }
                    break;
                case 2 :
                    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:30:5: identifier
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_identifier_in_selector142);
                    identifier17=identifier();

                    state._fsp--;

                    adaptor.addChild(root_0, identifier17.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "selector"

    public static class factor_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "factor"
    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:33:1: factor : ( identifier selector | integer | '(' expression ')' | '~' factor );
    public final Oberon0Parser.factor_return factor() throws RecognitionException {
        Oberon0Parser.factor_return retval = new Oberon0Parser.factor_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal21=null;
        Token char_literal23=null;
        Token char_literal24=null;
        Oberon0Parser.identifier_return identifier18 = null;

        Oberon0Parser.selector_return selector19 = null;

        Oberon0Parser.integer_return integer20 = null;

        Oberon0Parser.expression_return expression22 = null;

        Oberon0Parser.factor_return factor25 = null;


        CommonTree char_literal21_tree=null;
        CommonTree char_literal23_tree=null;
        CommonTree char_literal24_tree=null;

        try {
            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:34:3: ( identifier selector | integer | '(' expression ')' | '~' factor )
            int alt4=4;
            switch ( input.LA(1) ) {
            case IDENTIFIER:
                {
                alt4=1;
                }
                break;
            case INTEGER:
                {
                alt4=2;
                }
                break;
            case 14:
                {
                alt4=3;
                }
                break;
            case 16:
                {
                alt4=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:34:5: identifier selector
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_identifier_in_factor157);
                    identifier18=identifier();

                    state._fsp--;

                    adaptor.addChild(root_0, identifier18.getTree());
                    pushFollow(FOLLOW_selector_in_factor159);
                    selector19=selector();

                    state._fsp--;

                    adaptor.addChild(root_0, selector19.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:35:5: integer
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_integer_in_factor165);
                    integer20=integer();

                    state._fsp--;

                    adaptor.addChild(root_0, integer20.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:36:5: '(' expression ')'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    char_literal21=(Token)match(input,14,FOLLOW_14_in_factor171); 
                    char_literal21_tree = (CommonTree)adaptor.create(char_literal21);
                    adaptor.addChild(root_0, char_literal21_tree);

                    pushFollow(FOLLOW_expression_in_factor173);
                    expression22=expression();

                    state._fsp--;

                    adaptor.addChild(root_0, expression22.getTree());
                    char_literal23=(Token)match(input,15,FOLLOW_15_in_factor175); 
                    char_literal23_tree = (CommonTree)adaptor.create(char_literal23);
                    adaptor.addChild(root_0, char_literal23_tree);


                    }
                    break;
                case 4 :
                    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:37:5: '~' factor
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    char_literal24=(Token)match(input,16,FOLLOW_16_in_factor181); 
                    char_literal24_tree = (CommonTree)adaptor.create(char_literal24);
                    adaptor.addChild(root_0, char_literal24_tree);

                    pushFollow(FOLLOW_factor_in_factor183);
                    factor25=factor();

                    state._fsp--;

                    adaptor.addChild(root_0, factor25.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "factor"

    public static class term_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "term"
    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:40:1: term : factor ( ( '*' | 'DIV' | 'MOD' | '&' ) factor )* ;
    public final Oberon0Parser.term_return term() throws RecognitionException {
        Oberon0Parser.term_return retval = new Oberon0Parser.term_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set27=null;
        Oberon0Parser.factor_return factor26 = null;

        Oberon0Parser.factor_return factor28 = null;


        CommonTree set27_tree=null;

        try {
            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:41:3: ( factor ( ( '*' | 'DIV' | 'MOD' | '&' ) factor )* )
            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:41:5: factor ( ( '*' | 'DIV' | 'MOD' | '&' ) factor )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_factor_in_term198);
            factor26=factor();

            state._fsp--;

            adaptor.addChild(root_0, factor26.getTree());
            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:41:12: ( ( '*' | 'DIV' | 'MOD' | '&' ) factor )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( ((LA5_0>=17 && LA5_0<=20)) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:41:13: ( '*' | 'DIV' | 'MOD' | '&' ) factor
            	    {
            	    set27=(Token)input.LT(1);
            	    if ( (input.LA(1)>=17 && input.LA(1)<=20) ) {
            	        input.consume();
            	        adaptor.addChild(root_0, (CommonTree)adaptor.create(set27));
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_factor_in_term218);
            	    factor28=factor();

            	    state._fsp--;

            	    adaptor.addChild(root_0, factor28.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "term"

    public static class simpleExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "simpleExpression"
    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:44:1: simpleExpression : ( '+' | '-' )? term ( ( '+' | '-' | 'OR' ) term )* ;
    public final Oberon0Parser.simpleExpression_return simpleExpression() throws RecognitionException {
        Oberon0Parser.simpleExpression_return retval = new Oberon0Parser.simpleExpression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set29=null;
        Token set31=null;
        Oberon0Parser.term_return term30 = null;

        Oberon0Parser.term_return term32 = null;


        CommonTree set29_tree=null;
        CommonTree set31_tree=null;

        try {
            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:45:3: ( ( '+' | '-' )? term ( ( '+' | '-' | 'OR' ) term )* )
            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:45:5: ( '+' | '-' )? term ( ( '+' | '-' | 'OR' ) term )*
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:45:5: ( '+' | '-' )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( ((LA6_0>=21 && LA6_0<=22)) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:
                    {
                    set29=(Token)input.LT(1);
                    if ( (input.LA(1)>=21 && input.LA(1)<=22) ) {
                        input.consume();
                        adaptor.addChild(root_0, (CommonTree)adaptor.create(set29));
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }


                    }
                    break;

            }

            pushFollow(FOLLOW_term_in_simpleExpression242);
            term30=term();

            state._fsp--;

            adaptor.addChild(root_0, term30.getTree());
            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:45:21: ( ( '+' | '-' | 'OR' ) term )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( ((LA7_0>=21 && LA7_0<=23)) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:45:22: ( '+' | '-' | 'OR' ) term
            	    {
            	    set31=(Token)input.LT(1);
            	    if ( (input.LA(1)>=21 && input.LA(1)<=23) ) {
            	        input.consume();
            	        adaptor.addChild(root_0, (CommonTree)adaptor.create(set31));
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_term_in_simpleExpression258);
            	    term32=term();

            	    state._fsp--;

            	    adaptor.addChild(root_0, term32.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "simpleExpression"

    public static class expression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expression"
    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:48:1: expression : simpleExpression ( ( '=' | '#' | '<' | '<=' | '>=' | '>' ) simpleExpression )? ;
    public final Oberon0Parser.expression_return expression() throws RecognitionException {
        Oberon0Parser.expression_return retval = new Oberon0Parser.expression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set34=null;
        Oberon0Parser.simpleExpression_return simpleExpression33 = null;

        Oberon0Parser.simpleExpression_return simpleExpression35 = null;


        CommonTree set34_tree=null;

        try {
            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:49:3: ( simpleExpression ( ( '=' | '#' | '<' | '<=' | '>=' | '>' ) simpleExpression )? )
            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:49:5: simpleExpression ( ( '=' | '#' | '<' | '<=' | '>=' | '>' ) simpleExpression )?
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_simpleExpression_in_expression275);
            simpleExpression33=simpleExpression();

            state._fsp--;

            adaptor.addChild(root_0, simpleExpression33.getTree());
            // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:49:22: ( ( '=' | '#' | '<' | '<=' | '>=' | '>' ) simpleExpression )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( ((LA8_0>=24 && LA8_0<=29)) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:49:23: ( '=' | '#' | '<' | '<=' | '>=' | '>' ) simpleExpression
                    {
                    set34=(Token)input.LT(1);
                    if ( (input.LA(1)>=24 && input.LA(1)<=29) ) {
                        input.consume();
                        adaptor.addChild(root_0, (CommonTree)adaptor.create(set34));
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }

                    pushFollow(FOLLOW_simpleExpression_in_expression302);
                    simpleExpression35=simpleExpression();

                    state._fsp--;

                    adaptor.addChild(root_0, simpleExpression35.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expression"

    public static class assignment_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "assignment"
    // C:\\Eclipse\\workspace\\6236774\\src\\com\\douwekasemier\\oberon0\\parser\\Oberon0.g:52:1: assignment : identifier selector ':=' expression ;
    public final Oberon0Parser.assignment_return assignment() throws RecognitionException {
        Oberon0Parser.assignment_return retval = new Oberon0Parser.assignment_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal38=null;
        Oberon0Parser.identifier_return identifier36 = null;

